--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@typechain/hardhat": "^9.1.0",
     "@types/chai": "^4.3.10",
     "@types/mocha": "^10.0.4",
     "@types/node": "^20.9.2",
@@ -18,6 +19,7 @@
     "ethers": "^6.8.1",
     "hardhat": "^2.19.1",
     "ts-node": "^10.9.1",
+    "typechain": "^8.3.2",
     "typescript": "^5.2.2"
   },
   "dependencies": {
